src/main/kotlin/com/example/frontServer/dto/error/FrontServerErrorResponse.kt
package com.example.frontServer.dto.error

open class FrontServerErrorResponse(
    open val responseCode: FrontServerCode
)